# TaRDIS-DCR-Compiler

./: .gitignore  .ocamlformat  CO.json  LICENSE.md  P.json  README.md  dune-project  output_tardis.tardisdcr  tardis_dcr_compiler.opam
examples/edp/: v0.tardisdcr
examples/edp-use-case/: editor.dcr  editor2.dcr  v1.tardisdcr  v1_ifc.tardisdcr  v2.tardisdcr  v3.error.tardisdcr  v3.ifc.tardisdcr  v3.tardisdcr  v4.tardisdcr
lib/endpoint_projection/: dune  endpoint.ml  projectability.ml  projectability.mli  projections.ml  userset_encoding.ml
lib/frontend/: dune  lexer.mll  parser.mly  syntax.ml  unparser.ml
lib/sat/: dune  sat.ml  sat.mli
lib/translation/: babel.ml  dune  syntax.ml  translate.ml  translate.mli  unparser.ml
lib/utils/: dune  env.ml  logs.ml  results.ml
lib/verification/: dune  preprocessing.ml  preprocessing.mli  static_checking.ml  static_checking.mli  typing.ml  typing.mli
test/: common.ml  dune  io.ml  test_babel.ml  test_projectability.ml  test_projections.ml  test_static_ifc.ml  test_typechecking.ml
test/files/: blank.tardisdcr
test/files/static_checking/: 0.1.1.tardisdcr  0.1.3.tardisdcr  0.2.tardisdcr  0.3.tardisdcr  0.4  0.4.1.tardisdcr  0.tardisdcr  1.1.tardisdcr  1.2.tardisdcr  1.tardisdcr  3.tardisdcr  4.tardisdcr  5.tardisdcr  demo_fail  new_demo  test.1.3.ml  test2.3.ml  test2.4.ml  test_ocaml_z3  test_ocaml_z3.cmi  test_ocaml_z3.cmo  test_ocaml_z3.ml
test/files/static_checking/new_exam/: 1
test/files/typechecking/: 12.tardisdcr  13.tardisdcr  14.tardisdcr  2.tardisdcr  3.tardisdcr  4.tardisdcr  5.tardisdcr  6.tardisdcr
test/resources/projectability/: 01_top_level_data_dep_OK  02_top_level_data_dep_FAIL  02_top_level_data_dep_OK  03_top_level_data_dep_FAIL  04_top_level_data_dep_FAIL  0_all_tests  data_deps_01_OK  data_deps_02_OK  data_deps_03_FAIL  data_deps_04_FAIL  data_deps_05_OK  data_deps_06_FAIL  scope_visibility_01_FAIL  scope_visibility_02_FAIL  scope_visibility_03_FAIL  scope_visibility_04_FAIL  scope_visibility_05_OK  scope_visibility_06_OK  scope_visibility_07_OK  scope_visibility_08_OK  scope_visibility_09_OK  scope_visibility_10_OK  scope_visibility_11_OK  scope_visibility_12_FAIL  scope_visibility_13_FAIL  scope_visibility_14_FAIL  scope_visibility_15_OK
test/resources/static_checking/: 0.1.2.tardisdcr  0.1.tardisdcr  0.2.tardisdcr  0.3.tardisdcr  0.4  0.4.1.tardisdcr  0.5.tardisdcr  1.tardisdcr  2.tardisdcr  3.tardisdcr  7.tardisdcr  demo1
test/resources/static_checking/new_exam/: edp_ifc  ex_nao  last_example  new_edp  simple  tardis_1init  tardis_multiple
test/resources/typechecking/: 0.tardisdcr  1.tardisdcr  10.tardisdcr  11.tardisdcr  15.tardisdcr  16.tardisdcr  7.tardisdcr  8.tardisdcr  9.tardisdcr
