(env
 (dev
  (flags
   (:standard -warn-error -A))))

(test
 (name test_static_ifc)
 (deps
  (source_tree "resources/static_checking"))
 (libraries ounit2 verification utils))

(test
 (name test_projectability)
 (libraries ounit2 verification endpoint_projection utils)
 (deps
  (source_tree "./resources/projectability")))
